<resources>
    <string name="app_name">NBA_QuizApp</string>
    <string name="start_button">Comenzar</string>
    <string name="Confirm">Confirmar</string>
    <string name="CorrectAnswer">Respuesta correcta</string>
    <string name="IncorrectAnswer">Respuesta incorrecta</string>

    <!--Pregunta 1-->
    <string name="Q1">Quien es el jugador que tiene más anillos de campeón en la historia?</string>
    <string name="Q1A1">Lebron James</string>
    <string name="Q1A2">Kobe Bryant</string>
    <string name="Q1A3">Michael Jordan</string>
    <string name="Q1A4">Bill Russell</string>


</resources>